Some fun animations

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
   <script src="assets/js/modernizr.js"></script>
   <script src="https://cdn.socket.io/socket.io-1.1.0.js"></script>
-  <!--<script src="assets/js/main.js" type="text/javascript"></script>-->
+  <script src="assets/js/main.js" type="text/javascript"></script>
 
   <script>
     var isIe = false;
@@ -91,6 +91,7 @@
 
 <body>
 
+
   <header class="menu" role="navigation">
     <div class="container">
       <div class="pull-left">
@@ -103,27 +104,47 @@
     </div>
   </header>
 
+
   <div class="hero">
     <a href="/"><img src="assets/img/logo-color.svg" class="logo" alt="Köttet"></a>
     <div class="divider"></div>
     <a href="/"><img src="assets/img/vegosvar.svg" class="creds" alt="Köttet"></a>
   </div>
 
+
   <div class="del1">
     <div class="container">
       <div class="row">
-        <div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2  text-center">
-          <img src="assets/img/iss.svg" class="iss">
+        <div class="col-md-10 col-md-offset-1 col-lg-12 col-lg-offset-0  text-center">
+
           <img src="assets/img/moon.svg" class="moon">
+
+          <div class="stars pos1">
+            <div class="star"></div>
+          </div>
+          <div class="stars pos2">
+            <div class="star"></div>
+          </div>
+          <div class="stars pos3">
+            <div class="star"></div>
+          </div>
+
+          <div class="divider"></div>
           <h1>Berättelsen om köttet</h1>
           <p class="preamble">Varmt välkommen till berättelsen om köttindustrin</p>
           <p>Vårt samhälle har utvecklats snabbt på senare tid, men något som lever kvar är vår köttkonsumtion.<br/> 
           Kött är för många en självklarhet, för andra är det en jobbig verklighet.</p>
+
           <img src="assets/img/hero-earth.svg" class="earth">
+          <div class="iss pointer functional">
+            <span>Shit!</span>
+            <img src="assets/img/iss.svg">
+          </div>
         </div>
       </div>
     </div>
   </div>
+
 
 </body>
 </html>
