--- a/index.html
+++ b/index.html
@@ -51,18 +51,8 @@
 
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-55653281-1', 'auto');
-    ga('send', 'pageview');
-  </script>
+  <link rel="stylesheet" href="assets/css/style.css">
 
   <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
@@ -95,7 +85,7 @@
   <header class="menu" role="navigation">
     <div class="container">
       <div class="pull-left">
-        <a class="logo" href="https://kottet.se"><img src="assets/img/logo-inverted.svg"></a>
+        <a class="logo" href="https://kottet.se"><img src="assets/img/logo_inverted.svg"></a>
       </div>
       <ul class="share">
         <li><a href="https://twitter.com/intent/tweet?hashtags=k%C3%B6ttet,svmat,svpol,svensktkött&original_referer=https%3A%2F%2Fabout.twitter.com%2Fresources%2Fbuttons&text=Komj%C3%B6lkens%20p%C3%A5verkan%20p%C3%A5%20livet&tw_p=tweetbutton&url=https%3A%2F%2Fkottet.se&via=kottet" target="_blank"><span class="hideMobile">Twittra om</span> #köttet</a></li>
@@ -106,7 +96,7 @@
 
 
   <div class="hero">
-    <a href="/"><img src="assets/img/logo-color.svg" class="logo" alt="Köttet"></a>
+    <a href="/"><img src="assets/img/logo_color.svg" class="logo" alt="Köttet"></a>
     <div class="divider"></div>
     <a href="/"><img src="assets/img/vegosvar.svg" class="creds" alt="Köttet"></a>
   </div>
@@ -132,10 +122,10 @@
           <div class="divider"></div>
           <h1>Berättelsen om köttet</h1>
           <p class="preamble">Varmt välkommen till berättelsen om köttindustrin</p>
-          <p>Vårt samhälle har utvecklats snabbt på senare tid, men något som lever kvar är vår köttkonsumtion.<br/> 
-          Kött är för många en självklarhet, för andra är det en jobbig verklighet.</p>
+          <p>Människan har utvecklats snabbt. Vi har rest till månen och uppfunnit selfie sticks.<br/>Men något som lever kvar är vår köttkonsumtion. Vi bara älskar kött.</p> 
+          <p>Kött är för många en självklarhet, för andra är det en jobbig verklighet.<br/>Men vilka hemligheter döljer sig i det svenska köttet?</p>
 
-          <img src="assets/img/hero-earth.svg" class="earth">
+          <img src="assets/img/hero_earth.svg" class="earth">
           <div class="iss pointer functional">
             <span>Shit!</span>
             <img src="assets/img/iss.svg">
@@ -144,6 +134,46 @@
       </div>
     </div>
   </div>
+
+
+  <div class="del2">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <img src="assets/img/butterfly.svg" class="butterfly pointer">
+          <img src="assets/img/butterfly_shadow.svg" class="butterfly_shadow">
+          <img src="assets/img/first_human.svg" class="primary_img">
+        </div>
+        <div class="col-sm-7 col-sm-offset-1">
+          <div class="text">
+            <h2>Det har varit en lång utveckling</h2>
+            <p>För några miljoner år sedan började människan att utvecklas.<br/> Då hoppade även vi runt i skogen och letade mat för att överleva dagen.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="del3">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+            <img src="assets/img/orange.svg" class="orange pointer">
+            <img src="assets/img/orange_eaten.svg" class="orange_eaten pointer">
+            <img src="assets/img/orange_gone.svg" class="orange_gone">
+            <img src="assets/img/tool.svg" class="primary_img">
+        </div>
+        <div class="col-sm-7 col-sm-offset-1">
+          <div class="text">
+            <h2>Vi började uppfinna verktyg</h2>
+            <p>Med tiden blev vi smartare och hittade nya lösningar för att underlätta vår tillvaro.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
 
 </body>
