--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
           <img src="assets/img/hero_earth.svg" class="earth">
           <div class="iss pointer functional">
             <span>Shit!</span>
+            <img src="assets/img/explosion.svg" class="explosion">
             <img src="assets/img/iss.svg">
           </div>
         </div>
