Small text changes

--- a/index.html
+++ b/index.html
@@ -421,6 +421,11 @@
             <div class="safari">
               <div class="page1">
                 <img src="assets/img/mobile_svt.svg" alt="Svt">
+                <content>
+                <div class="img"><img src="assets/img/icon_cow.svg"></div>
+                <h4>Anmälningar om plågade slaktdjur ökar</h4>
+                <span class="date">2015</span>
+                </content>
               </div>
             </div>
             <img src="assets/img/mobile.svg" alt="Mobil illustration" class="primary_img">
@@ -429,9 +434,8 @@
         <div class="col-sm-7">
           <div class="text">
             <h2>De är alla svenska djur</h2>
-            <p>Vi vill gärna tro att de mår bra under den korta perioden som de lever bara för att de är svenska. Trots det så får vi höra på nyheterna år efter år om hur de missköts och utnyttjas.</p>
-            <p>I svenska djurrättsfilmer så som Ett liv som gris får vi se exempel på hur grisar kan ha det.</p>
-            <p>Och på den svenska sidan Walls of glass får vi se foton från svenska slakterier.</p>
+            <p>Vi får höra på nyheterna år efter år om hur de missköts och utnyttjas.</p>
+            <p>I den svenska djurrättsfilmen Ett liv som gris får vi se exempel på hur grisar har det. Och på den svenska sidan Walls of glass får vi se foton från svenska slakterier.</p>
           </div>
         </div>
       </div>
