--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <div class="col-sm-8 col-sm-offset-2">
           <div class="text text-center">
             <h2>Vi slaktar cirka<span class="lg"><span class="counter">90</span> miljoner</span> djur i Sverige varje år</h2>
-            <p class="source underline">Jordbruksverkets statistikdatabas 2013</p>
+            <p class="source dark_underline">Jordbruksverkets statistikdatabas 2013</p>
           </div>
         </div>
       </div>
@@ -338,7 +338,7 @@
         <div class="col-md-5 col-lg-4">
           <div class="text">
             <img src="assets/img/profile_lamb.svg" alt="Lamm illustration" class="primary_img showMobile">
-            <h2>Lamm</h2>
+            <h2>Lammen</h2>
             <p>Lammen behöver klippas varje år på grund av den extrema pälstillväxten. </p>
             <p>Anledningen till att ullen växer så fort beror på att vi människor har avlat fram lammen till att göra det.</p>
             <hr>
@@ -359,7 +359,7 @@
         <div class="col-md-5 col-lg-4">
           <div class="text">
             <img src="assets/img/profile_pig.svg" alt="Gris illustration" class="primary_img showMobile">
-            <h2>Gris</h2>
+            <h2>Grisen</h2>
             <p>Den här krabaten har fått svansen avbiten, blivit kastrerad utan bedövning och lider av magsår. Grisen kommer bland annat att användas för bacon och fläsk, men också för gelatin, en vanlig tillsats i en del godisar, glassar och kosmetika.</p> 
             <p>Han är ganska lik oss, precis som människan så är han allätare.</p>
             <hr>
@@ -379,7 +379,7 @@
         <div class="col-md-5 col-lg-4">
           <div class="text">
             <img src="assets/img/profile_chicken.svg" alt="Kyckling illustration" class="primary_img showMobile">
-            <h2>Kyckling</h2>
+            <h2>Kycklingen</h2>
             <p>Kycklingar kläcks i maskiner och får därför aldrig träffa sin mamma. Den här kycklingen delar boende tillsammans med några tusen andra kycklingar. <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/kor-kalvar-tjurar" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
             <hr>
             <p>Slaktas efter <strong>5 veckor</strong>. Hankycklingar inom äggindustrin slaktas däremot <strong>direkt</strong> efter födseln <a href="http://sverigesradio.se/sida/artikel.aspx?programid=97&artikel=2761983" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
@@ -401,7 +401,7 @@
             <img src="assets/img/rabbit.svg" alt="Kanin illustration" class="primary_img">
             <h2>Andra djur i maten</h2>
             <p>Kaniner, renar, hästar, ankor, strutsar, getter, gäss och kalkoner.<br/> 
-            De används alla i svensk livsmedelsindustrin. 
+            De används alla inom svensk livsmedelsindustri. 
             <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/kor-kalvar-tjurar" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
             <img src="assets/img/other_animals.svg" alt="Kyckling illustration" class="secondary_img">
           </div>
@@ -416,7 +416,7 @@
   <div class="del14">
     <div class="container">
       <div class="row">
-        <div class="col-sm-5">
+        <div class="col-sm-7">
           <div class="mobile">
             <div class="safari">
               <div class="page1">
@@ -424,19 +424,86 @@
                 <content>
                 <div class="img"><img src="assets/img/icon_cow.svg"></div>
                 <h4>Anmälningar om plågade slaktdjur ökar</h4>
-                <span class="date">2015</span>
+                <p><a href="http://www.svt.se/nyheter/regionalt/smalandsnytt/anmalningarna-for-plagade-slaktdjur-okar" target="_blank">Läs mer på SVT.se</a></p>
+                </content>
+              </div>
+              <div class="page2">
+                <img src="assets/img/mobile_dn.svg" alt="Svt">
+                <content>
+                <div class="img"><img src="assets/img/icon_chicken.svg"></div>
+                <h4>Tusentals kycklingar dog av värmen</h4>
+                <p><a href="http://www.dn.se/nyheter/sverige/tusentals-kycklingar-dog-av-varmen/" target="_blank">Läs mer på DN.se</a></p>
                 </content>
               </div>
             </div>
             <img src="assets/img/mobile.svg" alt="Mobil illustration" class="primary_img">
           </div>
         </div>
-        <div class="col-sm-7">
+        <div class="col-sm-5">
           <div class="text">
             <h2>De är alla svenska djur</h2>
-            <p>Vi får höra på nyheterna år efter år om hur de missköts och utnyttjas.</p>
-            <p>I den svenska djurrättsfilmen Ett liv som gris får vi se exempel på hur grisar har det. Och på den svenska sidan Walls of glass får vi se foton från svenska slakterier.</p>
+            <p>Sverige ligger i framkant när det gäller djurskydd. Men världens bästa djurskydd har vi inte. På nyheterna går det att läsa om hur de missköts och utnyttjas år efter år. <a href="http://www.svd.se/opinion/brannpunkt/nej-sverige-har-inte-varldens-basta-djurskydd_4097257.svd" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
+            <p>I den svenska filmen <a href="http://www.ettlivsomgris.se/" target="_blank" title="Ett liv som gris">Ett liv som gris</a> får vi se exempel på hur grisar har det. Och på <a href="http://www.wallsofglass.se/" target="_blank" title="Walls of Glass Sverige">Walls of glass</a> får vi se foton inifrån svenska slakterier.</p>
+            <p>På <a href="http://mjolken.se" target="_blank" title="Mjölken.se">Mjölken.se</a> berättar vi om den svenska mjölkindustrin.</p>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div class="del15">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="text">
+            <h2>Det påverkar vårt hem, Jorden</h2>
+            <p>Den globala kött- och mejeriindustrin står för <strong>70%</strong> av den globala sötvattenskonsumtionen, <strong>38%</strong> av den totala landanvändningen och <strong>19%</strong> av världens växthusgasutsläpp.</p>
+            <p>I en rapport från 2010 rekommenderar FN en minskad kött- och mejerikonsumtion. <a href="http://www.theguardian.com/environment/2010/jun/02/un-report-meat-free-diet" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
+          </div>
+        </div>
+        <div class="col-sm-6 text-center">
+          <div class="stats">
+            <div class="row">
+              <div class="col-xs-4">
+                <div class="stat">
+                  <div class="content greenhouse_gas_emissions" style="height: 19%;"><div class="numbers"><span class="counter">19</span>%</div></div>
+                </div>
+              </div>
+              <div class="col-xs-4">
+                <div class="stat">
+                  <div class="content land_use" style="height: 38%;"><div class="numbers"><span class="counter">38</span>%</div></div>
+                </div>
+              </div>
+              <div class="col-xs-4">
+                <div class="stat">
+                  <div class="content water_use" style="height: 70%;"><div class="numbers"><span class="counter">70</span>%</div></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <p class="source light_underline">FN-rapport 2010</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="del16">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="text">
+            <h2>Dessutom går <span class="counter">90%</span> av biomassan förlorad genom djuren</h2>
+            <p>För varje steg i näringspyramiden så går energi förlorad. Det beror på att djuren förbrukar upp biomassan för att producera värme åt sig själv bland annat. </p>
+            <p>Näringskedjor har vanligtvis endast tre eller fyra nivåer på grund av detta. <a href="http://publications.lib.chalmers.se/records/fulltext/72641.pdf" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
+          </div>
+        </div>
+        <div class="col-sm-6 text-center">
+          <img src="assets/img/gear.svg" class="gear1">
+          <img src="assets/img/gear.svg" class="gear2">
+          <img src="assets/img/nutrition_pyramid.svg">
         </div>
       </div>
     </div>
