--- a/src/index.html
+++ b/src/index.html
@@ -58,10 +58,9 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-  <script src="assets/js/modernizr.js"></script>
-  <script src="https://cdn.socket.io/socket.io-1.1.0.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script> 
-  <script src="assets/components/counter-up/jquery.counterup.min.js" type="text/javascript"></script>
+  <script src="assets/js/vendor/jquery.counterup.min.js" type="text/javascript"></script>
+  <script src="assets/js/vendor/modernizr.js"></script>
   <script src="assets/js/main.js" type="text/javascript"></script>
 
 
