--- a/src/index.html
+++ b/src/index.html
@@ -317,7 +317,7 @@
             <img src="assets/img/profile_cow.svg" alt="Ko illustration" class="primary_img showMobile">
             <h2>First up, kossan</h2>
             <p>Hon kallas även för nötdjur. Ordet nöt kommer från det forngermanska ordet ‘nauta’, vilket betyder egendom. <a href="http://g3.spraakdata.gu.se/saob/show.phtml?filenr=1/170/216.html" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
-            <p>Det finns idag 1,4 miljoner kor, kalvar, kvigor och tjurar i Sverige som väntar på att slaktas i år. Deras kött kommer att användas för att tillverka hamburgare, filéer och kalvkotletter.</p> 
+            <p>Deras kött kommer att användas för att tillverka hamburgare, filéer och kalvkotletter.</p> 
             <p>Förutom det så insemineras kor med sperma för att föda kalvar. På så sätt kan de fortsätta producera mjölk. Mjölken används sedan för att producera mejeriprodukter.</p>
             <hr>
             <p>Kalven slaktas efter <strong>18 månader</strong> <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/kor-kalvar-tjurar" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
@@ -441,7 +441,7 @@
         <div class="col-sm-5">
           <div class="text">
             <h2>De är alla svenska djur</h2>
-            <p>Sverige ligger i framkant när det gäller djurskydd. Men världens bästa djurskydd har vi inte. På nyheterna går det att läsa om hur de missköts och utnyttjas år efter år. <a href="http://www.svd.se/opinion/brannpunkt/nej-sverige-har-inte-varldens-basta-djurskydd_4097257.svd" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
+            <p>Sverige ligger i framkant. Men världens bästa djurskydd har vi inte. På nyheterna går det att läsa om hur de missköts och utnyttjas år efter år. <a href="http://www.svd.se/opinion/brannpunkt/nej-sverige-har-inte-varldens-basta-djurskydd_4097257.svd" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
             <p>I den svenska filmen <a href="http://www.ettlivsomgris.se/" target="_blank" title="Ett liv som gris">Ett liv som gris</a> får vi se exempel på hur grisar har det. Och på <a href="http://www.wallsofglass.se/" target="_blank" title="Walls of Glass Sverige">Walls of glass</a> får vi se foton inifrån svenska slakterier.</p>
             <p>På <a href="http://mjolken.se" target="_blank" title="Mjölken.se">Mjölken.se</a> berättar vi om den svenska mjölkindustrin.</p>
           </div>
@@ -503,6 +503,28 @@
           <img src="assets/img/gear.svg" class="gear1">
           <img src="assets/img/gear.svg" class="gear2">
           <img src="assets/img/nutrition_pyramid.svg">
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="del17">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="butcher">
+            <img src="assets/img/lamp_on.svg" class="lamp_on">
+            <img src="assets/img/lamp_off.svg" class="lamp_off">
+            <img src="assets/img/butcher_light.svg" class="butcher_light">
+            <img src="assets/img/butcher_dark.svg" class="butcher_dark">
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="text">
+            <h2>Dags för den läskiga biten, slakten</h2>
+            <p>Eftersom vi inte vill skrämma dig så har vi valt att tona ner illustrationerna en aning.</p>
+          </div>
         </div>
       </div>
     </div>
