--- a/src/index.html
+++ b/src/index.html
@@ -288,7 +288,7 @@
   <div class="del9">
     <div class="container">
       <div class="row">
-        <div class="col-md-5 col-lg-4">
+        <div class="col-xs-5 col-lg-4">
           <div class="text">
             <img src="assets/img/profile_cow.svg" alt="Ko illustration" class="primary_img showMobile">
             <h2>First up, kossan</h2>
@@ -299,7 +299,7 @@
             <p>Kalven slaktas efter <strong>18 månader</strong> <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/kor-kalvar-tjurar" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
           </div>
         </div>
-        <div class="col-md-7 col-lg-8 text-center">
+        <div class="col-xs-7 col-lg-8 text-center">
           <img src="assets/img/profile_cow.svg" alt="Ko illustration" class="primary_img hideMobile">
         </div>
       </div>
@@ -310,7 +310,7 @@
   <div class="del10">
     <div class="container">
       <div class="row">
-        <div class="col-md-5 col-lg-4">
+        <div class="col-xs-5 col-lg-4">
           <div class="text">
             <img src="assets/img/profile_lamb.svg" alt="Lamm illustration" class="primary_img showMobile">
             <h2>Lammen</h2>
@@ -320,7 +320,7 @@
             <p>Slaktas efter <strong>6 månader</strong> <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/far-och-lamm" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
           </div>
         </div>
-        <div class="col-md-7 col-lg-8 text-center">
+        <div class="col-xs-7 col-lg-8 text-center">
           <img src="assets/img/profile_lamb.svg" alt="Lamm illustration" class="primary_img hideMobile">
         </div>
       </div>
@@ -331,7 +331,7 @@
   <div class="del11">
     <div class="container">
       <div class="row">
-        <div class="col-md-5 col-lg-4">
+        <div class="col-xs-5 col-lg-4">
           <div class="text">
             <img src="assets/img/profile_pig.svg" alt="Gris illustration" class="primary_img showMobile">
             <h2>Grisen</h2>
@@ -341,7 +341,7 @@
             <p>Slaktas efter <strong>6 månader</strong> <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/grisar" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
           </div>
         </div>
-        <div class="col-md-7 col-lg-8 text-center">
+        <div class="col-xs-7 col-lg-8 text-center">
           <img src="assets/img/profile_pig.svg" alt="Gris illustration" class="primary_img hideMobile">
         </div>
       </div>
@@ -351,7 +351,7 @@
   <div class="del12">
     <div class="container">
       <div class="row">
-        <div class="col-md-5 col-lg-4">
+        <div class="col-xs-5 col-lg-4">
           <div class="text">
             <img src="assets/img/profile_chicken.svg" alt="Kyckling illustration" class="primary_img showMobile">
             <h2>Kycklingen</h2>
@@ -360,7 +360,7 @@
             <p>Slaktas efter <strong>5 veckor</strong>. Hankycklingar inom äggindustrin slaktas däremot <strong>direkt</strong> efter födseln <a href="http://sverigesradio.se/sida/artikel.aspx?programid=97&artikel=2761983" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
           </div>
         </div>
-        <div class="col-md-7 col-lg-8 text-center">
+        <div class="col-xs-7 col-lg-8 text-center">
           <img src="assets/img/profile_chicken.svg" alt="Kyckling illustration" class="primary_img hideMobile">
         </div>
       </div>
@@ -470,7 +470,7 @@
       <div class="row">
         <div class="col-sm-6">
           <div class="text">
-            <h2>Dessutom går <span class="counter">90%</span> av biomassan förlorad genom djuren</h2>
+            <h2>Dessutom går <span class="procent"><span class="counter">90</span>%</span> av biomassan förlorad genom djuren</h2>
             <p>För varje steg i näringspyramiden så går energi förlorad. Det beror på att djuren förbrukar upp biomassan för att producera värme åt sig själv bland annat. </p>
             <p>Näringskedjor har vanligtvis endast tre eller fyra nivåer på grund av detta. <a href="http://publications.lib.chalmers.se/records/fulltext/72641.pdf" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
           </div>
@@ -505,6 +505,64 @@
       </div>
     </div>
   </div>
+
+
+  <div class="del18">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 col-sm-offset-3">
+          <div class="text">
+            <h2>Bedövningen</h2>
+            <p>I Sverige är det olagligt att utföra slakt utan bedövning, sedan finns det utländskt kött som inte följer dessa lagar. Den vanligaste orsaken  till att inte använda bedövning är på grund av ekonomiska skäl. Det är billigare helt enkelt.</p>
+            <hr>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="del19">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 col-sm-offset-3">
+          <div class="text text-center">
+            <h3><strong>Elbedövning</strong></h3>
+            <p>Vanligaste bedövningsmetoden för kycklingar är elbedövning. Kycklingen hängs upp och ner i fötterna och doppas sedan ner i en strömfarande tank med vatten. <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/kycklingar" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="drowning">
+          <div class="bubble one"></div>
+          <div class="bubble two"></div>
+          <img src="assets/img/electricity.svg" class="lightning one">
+          <img src="assets/img/electricity.svg" class="lightning two">
+          <img src="assets/img/electricity.svg" class="lightning three">
+          <img src="assets/img/drowning_chicken.svg" class="primary_img">
+      </div>
+    </div>
+  </div>
+
+
+  <div class="del20">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 col-sm-offset-3">
+          <div class="text text-center">
+            <h3><strong>Koldioxidbedövning</strong></h3>
+            <p>Den vanligaste metoden för att bedöva grisar innan slakt är med gas.</p>
+          </div>
+        </div>
+      </div>
+      <div class="gas">
+          <img src="assets/img/steam.svg" class="steam one">
+          <img src="assets/img/steam.svg" class="steam two">
+          <img src="assets/img/steam.svg" class="steam three">
+          <img src="assets/img/gas.svg" class="primary_img">
+      </div>
+    </div>
+  </div>
+
 
 
 </body>
